--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,7 @@
-
 services:
   - type: web
-    name: food101-api
+    name: food-recognition-api
     env: python
     plan: free
     buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn main:app --host 0.0.0.0 --port 10000
+    startCommand: gunicorn main:app --workers 1 --worker-class uvicorn.workers.UvicornWorker --bind 0.0.0.0:10000
